...
                )
            }

            // Description
            Column {
                Text(
                    text = "Synopsis",
                    style = MaterialTheme.typography.labelLarge,
                    fontWeight = FontWeight.Bold
                )
                Text(
                    text = movie.description,
                    style = MaterialTheme.typography.bodyMedium
...
